# gtk3-classic-module

./: README.md  main.c  meson.build
data/: 00_gtk3-classic-module.gschema.override  54gtk3-classic-module  settings.ini  zebra-stripes.css
debian/: README.Debian  changelog  control  copyright  gtk3-classic-module.dsc  gtk3-classic-module.install  rules
include/: gtk3-classic.h
patches/: button-menu-icons.c  dialogs.c  icon-sizes.c  no-emojis.c  persistent-mnemonics.c  smaller-widgets.c  treeview-zebra-stripes.c
